<resources>
    <string name="welcome">Welcome</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="retry">Retry</string>
    <string name="please_load_again">Please Load again</string>
    <string name="paging_local">Paging Local</string>
    <string name="paging_network">Paging Network</string>
    <string name="login_page">Login Page</string>
    <string name="more">More</string>
    <string name="image_view">Image View</string>
    <string name="material_kit">Material Kit</string>
    <string name="typography">Typography</string>
    <string name="button">Button</string>
    <string name="root_kit">Root Kit</string>
    <string name="lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="workflow">Workflow</string>
    <string name="display_large_roboto_57_64_0_25">Display Large - Roboto 57/64 -0.25</string>
    <string name="display_medium_roboto_45_52_0">Display Medium - Roboto 45/52.0</string>
    <string name="display_small_roboto_36_44_0">Display Small - Roboto 36/44.0</string>
    <string name="headline_large_roboto_32_40_0">Headline Large - Roboto 32/40.0</string>
    <string name="headline_medium_roboto_28_36_0">Headline Medium - Roboto 28/36.0</string>
    <string name="headline_small_roboto_24_32_0">Headline Small - Roboto 24/32.0</string>
    <string name="title_large_roboto_regular_22_28_0">Title Large - Roboto Regular 22/28.0</string>
    <string name="title_medium_roboto_medium_16_24_0_15">Title Medium - Roboto Medium 16/24.+0.15</string>
    <string name="title_small_roboto_medium_14_20_0_1">Title Small - Roboto Medium 14/20.+0.1</string>
    <string name="label_large_roboto_medium_14_20_0_1">Label Large - Roboto Medium 14/20.+0.1</string>
    <string name="label_medium_roboto_medium_12_16_0_5">Label Medium - Roboto Medium 12/16.+0.5</string>
    <string name="label_small_roboto_medium_11_16_0_5">Label Small - Roboto Medium 11/16.+0.5</string>
    <string name="body_large_roboto_16_24_0_5">Body Large - Roboto 16/24.+0.5</string>
    <string name="body_medium_roboto_14_20_0_25">Body Medium - Roboto 14/20.+0.25</string>
    <string name="body_small_roboto_12_16_0_4">Body Small - Roboto 12/16.+0.4</string>
    <string name="card">Card</string>
    <string name="cards_are_versatile_containers_holding_anything_from_images_to_headlines_supporting_text_buttons_lists_and_other_components">Cards are versatile containers, holding anything from images to headlines, supporting text, buttons, lists, and other components.</string>
    <string name="buttons_help_people_take_actions_such_as_sending_an_email_sharing_a_document_or_liking_a_comment">Buttons help people take actions, such as sending an email, sharing a document, or liking a comment.</string>
    <string name="use_typography_to_present_your_design_and_content_as_clearly_and_efficiently_as_possible">Use typography to present your design and content as clearly and efficiently as possible.</string>
    <string name="header">Header</string>
    <string name="subheader">SubHeader</string>
    <string name="enabled">Enabled</string>
    <string name="closed">Closed</string>
    <string name="top_tab_bars">Top Tab Bars</string>
    <string name="top_app_bars_display_information_and_actions_at_the_top_of_a_screen_such_as_the_page_title_and_shortcuts_to_actions">Top app bars display information and actions at the top of a screen, such as the page title and shortcuts to actions.</string>
    <string name="floatingactionbutton">FloatingActionButton</string>
    <string name="awesome">Awesome</string>
    <string name="add">Add</string>
    <string name="back">Back</string>
    <string name="bottom_app_bar">Bottom App Bar</string>
    <string name="bottom_app_bars_display_navigation_and_key_actions_at_the_bottom_of_a_screen">Bottom app bars display navigation and key actions at the bottom of a screen.</string>
    <string name="navigation">Navigation</string>
    <string name="badge">Badge</string>
    <string name="badges_are_used_to_convey_dynamic_information_such_as_a_count_or_status_a_badge_can_include_text_labels_or_numbers">Badges are used to convey dynamic information, such as a count or status. A badge can include text, labels, or numbers.</string>
    <string name="checkbox">Checkbox</string>
    <string name="checkboxes_allow_users_to_select_one_or_more_items_from_a_set_and_can_be_used_to_turn_an_option_on_or_off_they_re_a_kind_of_selection_control_that_helps_users_make_a_choice_from_a_set_of_options">Checkboxes allow users to select one or more items from a set and can be used to turn an option on or off. They’re a kind of selection control that helps users make a choice from a set of options.</string>
    <string name="check_me">Check me!</string>
    <string name="parent">Parent</string>
    <string name="chip">Chip</string>
    <string name="chips_help_people_enter_information_make_selections_filter_content_or_trigger_actions">Chips help people enter information, make selections, filter content, or trigger actions.</string>
    <string name="carousel">Carousel</string>
    <string name="carousels_contains_a_collection_of_items_that_can_be_scrolled_on_and_off_the_screen">Carousels contains a collection of items that can be scrolled on and off the screen.</string>
    <string name="hyperspace_jump">Hyperspace Jump</string>
    <string name="animation">Animation</string>
    <string name="motion_makes_a_ui_expressive_and_easy_to_use">Motion makes a UI expressive and easy to use</string>
    <string name="visible">Visible</string>
    <string name="invisible">Invisible</string>
    <string name="while_your_app_is_being_used_new_information_appears_on_the_screen_and_old_information_is_removed_changing_what_shows_on_the_screen_immediately_can_be_jarring_and_users_can_miss_new_content_that_appears_suddenly_animations_slow_down_the_changes_and_draw_the_user_s_eye_with_motion_so_that_the_updates_are_more_obvious">While your app is being used, new information appears on the screen and old information is removed. Changing what shows on the screen immediately can be jarring, and users can miss new content that appears suddenly. Animations slow down the changes and draw the user\'s eye with motion so that the updates are more obvious.</string>
    <string name="crossfade">Crossfade</string>
    <string name="drawable">Drawable</string>
    <string name="face">Face</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="home">Home</string>
    <string name="per_app_language">Per-App Language</string>
    <string name="english">English</string>
    <string name="vietnamese">Vietnamese</string>

</resources>