<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_awesome"
        android:icon="@drawable/baseline_auto_awesome_24"
        android:title="@string/awesome"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_back"
        android:icon="@drawable/baseline_arrow_back_24"
        android:title="@string/back"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_more"
        android:icon="@drawable/more_vert_24px"
        android:title="@string/more"
        app:showAsAction="ifRoom" />

</menu>