<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/padding_16">

    <Button
        android:id="@+id/btnClosed"
        style="?materialIconButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        app:icon="@drawable/baseline_close_24" />

    <TextView
        android:id="@+id/tvHeader"
        style="@style/App.TextAppearance.Material3.HeadlineMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_16"
        android:text="@string/per_app_language"
        android:textAlignment="center" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radioEN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/english" />

        <RadioButton
            android:id="@+id/radioVN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese" />

    </RadioGroup>

</LinearLayout>