<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    style="?materialCardViewFilledStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin_8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivAvatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:contentDescription="@string/image_view"
            android:src="@drawable/style_avatar"
            app:layout_constraintBottom_toBottomOf="@id/tvSubHeader"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvHeader" />

        <TextView
            android:id="@+id/tvHeader"
            style="@style/App.TextAppearance.Material3.TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_12"
            android:text="@string/header"
            app:layout_constraintEnd_toStartOf="@id/btnIcon"
            app:layout_constraintStart_toEndOf="@id/ivAvatar"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSubHeader"
            style="@style/App.TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/subheader"
            app:layout_constraintEnd_toEndOf="@id/tvHeader"
            app:layout_constraintStart_toStartOf="@id/tvHeader"
            app:layout_constraintTop_toBottomOf="@id/tvHeader" />

        <Button
            android:id="@+id/btnIcon"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/more_vert_24px"
            app:layout_constraintBottom_toBottomOf="@id/tvSubHeader"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/tvHeader" />

        <ImageView
            android:id="@+id/ivMedia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:contentDescription="@string/image_view"
            android:scaleType="centerCrop"
            android:src="@drawable/im_media_card"
            app:layout_constraintTop_toBottomOf="@id/ivAvatar" />

        <TextView
            android:id="@+id/tvTitle"
            style="@style/App.TextAppearance.Material3.BodyLarge"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:layout_marginHorizontal="@dimen/margin_16"
            android:text="@string/header"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivMedia" />

        <TextView
            android:id="@+id/tvSubTitle"
            style="@style/App.TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:text="@string/subheader"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <TextView
            android:id="@+id/tvBody"
            style="@style/App.TextAppearance.Material3.BodyMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:text="@string/lorem_ipsum_dolor_sit_amet_consectetur_adipiscing_elit_sed_do_eiusmod_tempor"
            app:layout_constraintEnd_toEndOf="@id/tvSubTitle"
            app:layout_constraintStart_toStartOf="@id/tvSubTitle"
            app:layout_constraintTop_toBottomOf="@id/tvSubTitle" />


        <Button
            android:id="@+id/btnEnabled"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_16"
            android:text="@string/enabled"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvBody" />

        <Button
            android:id="@+id/btnClosed"
            style="@style/Widget.Material3.Button.ElevatedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_8"
            android:text="@string/closed"
            app:layout_constraintBottom_toBottomOf="@id/btnEnabled"
            app:layout_constraintEnd_toStartOf="@id/btnEnabled"
            app:layout_constraintTop_toTopOf="@id/btnEnabled" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>